force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Activate_Custom__c.field-meta.xml
<CustomField>
    <fullName>Activate_Custom__c</fullName>
    <formula>IF (OR(AND (CONTAINS($CustomMetadata.Agreement_Action_Mapping__mdt.Activate.Agreement_Process_Flow_Short_Name__c, APTS_Process_Flow__c), CONTAINS($CustomMetadata.Agreement_Action_Mapping__mdt.Activate.Agreement_Status_Category__c, TEXT(Apttus__Status_Category__c)), CONTAINS($CustomMetadata.Agreement_Action_Mapping__mdt.Activate.Agreement_Status__c, TEXT(Apttus__Status__c))) , CONTAINS($CustomMetadata.Agreement_Action_Mapping__mdt.Activate.Additional_Inclusion__c, APTS_Process_Flow__c &amp; TEXT(Apttus__Status_Category__c) &amp; TEXT(Apttus__Status__c)) ), IF(OR($User.UIThemeDisplayed == &#39;Theme4d&#39;, $User.UIThemeDisplayed == &#39;Theme4t&#39;), $CustomMetadata.Agreement_Action_Mapping__mdt.Activate.Lightning_Link__c , $CustomMetadata.Agreement_Action_Mapping__mdt.Activate.Link__c),NULL)</formula>
    <label>Activate Custom</label>
    <type>Text</type>
</CustomField>