force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Agreed_Use__c.field-meta.xml
<CustomField>
    <fullName>APTS_Agreed_Use__c</fullName>
    <description>Agreed Use</description>
    <label>Agreed Use</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>