force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Agreement_Number_Old__c.field-meta.xml
<CustomField>
    <fullName>APTS_Agreement_Number_Old__c</fullName>
    <description>Used for agreements uploaded before go-live in order to reference historical records from Excel tables</description>
    <inlineHelpText>Used for agreements uploaded before go-live</inlineHelpText>
    <label>Agreement Number (Old)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>