force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Comment__c.field-meta.xml
<CustomField>
    <fullName>APTS_Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>