force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Company_Signed_By_second__c.field-meta.xml
<CustomField>
    <fullName>APTS_Company_Signed_By_second__c</fullName>
    <description>Identify internal second signatory</description>
    <inlineHelpText>Identify internal second signatory</inlineHelpText>
    <label>Company Signed By (second)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>