force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Company_Signed_Title_second__c.field-meta.xml
<CustomField>
    <fullName>APTS_Company_Signed_Title_second__c</fullName>
    <description>Title of person signing second on behalf of Company</description>
    <inlineHelpText>Title of person signing second on behalf of Company</inlineHelpText>
    <label>Company Signed Title (second)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>