force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Confidentiality_Grace_Years__c.field-meta.xml
<CustomField>
    <fullName>APTS_Confidentiality_Grace_Years__c</fullName>
    <defaultValue>5</defaultValue>
    <description>If contract type is NDA, obligation to keep confidentiality after expiration in years.</description>
    <inlineHelpText>The number of years after expiration that confidentiality applies</inlineHelpText>
    <label>Confidentiality Grace (Years)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>