force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Confidentiality_of_affiliate__c.field-meta.xml
<CustomField>
    <fullName>APTS_Confidentiality_of_affiliate__c</fullName>
    <label>Confidentiality/Involvement of affiliate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>