force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Controller__c.field-meta.xml
<CustomField>
    <fullName>APTS_Controller__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Controller for DSO</description>
    <label>Controller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Controller)</relationshipLabel>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>