force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Country_Controller__c.field-meta.xml
<CustomField>
    <fullName>APTS_Country_Controller__c</fullName>
    <label>Country Controller</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APTS_Agreement_Country</valueSetName>
    </valueSet>
</CustomField>