force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Data_Security__c.field-meta.xml
<CustomField>
    <fullName>APTS_Data_Security__c</fullName>
    <inlineHelpText>Whether the Data security is Standard or Non-Standard</inlineHelpText>
    <label>Data Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>