force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Data_Sub_processor_Country__c.field-meta.xml
<CustomField>
    <fullName>APTS_Data_Sub_processor_Country__c</fullName>
    <description>Data Sub-processor Country</description>
    <label>Data Sub-processor Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APTS_Country_Agreements</valueSetName>
    </valueSet>
</CustomField>