force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Department_DSO_Agreements__c.field-meta.xml
<CustomField>
    <fullName>APTS_Department_DSO_Agreements__c</fullName>
    <description>Department related to the agreement</description>
    <inlineHelpText>Department and contact related to the agreement</inlineHelpText>
    <label>Department</label>
    <type>TextArea</type>
</CustomField>