force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_DPO_mentioned_by_name__c.field-meta.xml
<CustomField>
    <fullName>APTS_DPO_mentioned_by_name__c</fullName>
    <label>DPO mentioned by name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>