force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_DSO_Country_Controller__c.field-meta.xml
<CustomField>
    <fullName>APTS_DSO_Country_Controller__c</fullName>
    <description>Data Controller Country</description>
    <label>Data Controller Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APTS_Country_Agreements</valueSetName>
    </valueSet>
</CustomField>