force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_DSO_Status__c.field-meta.xml
<CustomField>
    <fullName>APTS_DSO_Status__c</fullName>
    <label>DSO_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>