force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_ETAS_Products__c.field-meta.xml
<CustomField>
    <fullName>APTS_ETAS_Products__c</fullName>
    <description>List of products</description>
    <label>ETAS Products</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>