force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Governing_Law__c.field-meta.xml
<CustomField>
    <fullName>APTS_Governing_Law__c</fullName>
    <description>Created for CLM based Accelerator</description>
    <inlineHelpText>To identify the governing law of the agreement</inlineHelpText>
    <label>Governing Law</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>German Law</fullName>
            </value>
            <value>
                <fullName>Swiss Law</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Dutch Law</fullName>
            </value>
            <value>
                <fullName>French Law</fullName>
            </value>
            <value>
                <fullName>Korean Law</fullName>
            </value>
            <value>
                <fullName>UK Law</fullName>
            </value>
            <value>
                <fullName>Canada Law</fullName>
            </value>
            <value>
                <fullName>USA Law</fullName>
            </value>
            <value>
                <fullName>Japanese Law</fullName>
            </value>
            <value>
                <fullName>Chinese Law</fullName>
            </value>
            <value>
                <fullName>Italian Law</fullName>
            </value>
            <value>
                <fullName>Indian Law</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>