force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_History__c.field-meta.xml
<CustomField>
    <fullName>APTS_History__c</fullName>
    <description>Contract history including Predecessor / comparable project with this customer: Sales volume and Liability Cap</description>
    <inlineHelpText>Enter Contract history including Predecessor / comparable project with this customer: Sales volume and Liability Cap</inlineHelpText>
    <label>History</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>