force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Home_Office_Remote_Work__c.field-meta.xml
<CustomField>
    <fullName>APTS_Home_Office_Remote_Work__c</fullName>
    <label>Home-Office / Remote Work</label>
    <length>120</length>
    <type>Text</type>
</CustomField>