force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Import_Fully_Signed_Document__c.field-meta.xml
<CustomField>
    <fullName>APTS_Import_Fully_Signed_Document__c</fullName>
    <formula>IF (AND(ISPICKVAL(Apttus__Status_Category__c, &quot;In Signatures&quot;),ISPICKVAL( Apttus__Status__c , &quot;Other Party Signatures&quot;)), HYPERLINK(&quot;/apex/Apttus__OfflineDocumentImport?id=&quot;&amp;Id&amp;&quot;&amp;finishPage=APTS_ImportFullySignedDocument&amp;isCustomImport=true&amp;finish_id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__LightningResource/images/actions/ImportOfflineDocument.png&quot;, &quot;Import Fully Signed Document&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Fully Signed Document</label>
    <type>Text</type>
</CustomField>