force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Indemnification_Categories__c.field-meta.xml
<CustomField>
    <fullName>APTS_Indemnification_Categories__c</fullName>
    <inlineHelpText>Indemnity is a contractual obligation of one party to compensate the loss incurred to the other party due to the acts of the indemnitor or any other party.</inlineHelpText>
    <label>Indemnification Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard (IP Infringement Only)</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>