force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Internal_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>APTS_Internal_Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for CLM base Accelerator</description>
    <inlineHelpText>Company&#39;s entity responsible for the Contract</inlineHelpText>
    <label>ETAS Legal Entity</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Entity Name)</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>