force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_IP_Indemnification__c.field-meta.xml
<CustomField>
    <fullName>APTS_IP_Indemnification__c</fullName>
    <description>IP Indemnification applies to this contract</description>
    <inlineHelpText>Is IP Indemnification required?</inlineHelpText>
    <label>IP Indemnification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>