force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_IP_Indemnification_cap__c.field-meta.xml
<CustomField>
    <fullName>APTS_IP_Indemnification_cap__c</fullName>
    <description>If IP Indemnification applies, what is the cap?</description>
    <inlineHelpText>If IP Indemnification applies, what is the cap?</inlineHelpText>
    <label>IP Indemnification cap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>