force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_ISO27001_certified__c.field-meta.xml
<CustomField>
    <fullName>APTS_ISO27001_certified__c</fullName>
    <label>ISO27001 certified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>