force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_ISO_certificate_expiry_date__c.field-meta.xml
<CustomField>
    <fullName>APTS_ISO_certificate_expiry_date__c</fullName>
    <description>ISO certificate expiry date</description>
    <label>ISO certificate expiry date</label>
    <type>Date</type>
</CustomField>