force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_ISP_Contact__c.field-meta.xml
<CustomField>
    <fullName>APTS_ISP_Contact__c</fullName>
    <description>The person who process an agreement from Information Security and Data Protection Department in ETAS</description>
    <label>ISP_Office Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISP_Office_contact</valueSetName>
    </valueSet>
</CustomField>