force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_ISP_Office_contact_3__c.field-meta.xml
<CustomField>
    <fullName>APTS_ISP_Office_contact_3__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contact person from DSO who processes the Agreement</description>
    <label>ISP Office contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements (ISP Office contact 3)</relationshipLabel>
    <relationshipName>Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>