force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Language__c.field-meta.xml
<CustomField>
    <fullName>APTS_Language__c</fullName>
    <description>The language is used to select the a template</description>
    <inlineHelpText>Select the language of the document to generate</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>German</fullName>
                <default>true</default>
                <label>German</label>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>