force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Liability_Slight_Ratio__c.field-meta.xml
<CustomField>
    <fullName>APTS_Liability_Slight_Ratio__c</fullName>
    <formula>APTS_Liability_Type_Slight_Amount__c /  Apttus__Total_Contract_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liability Slight Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>