force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Liability_Type_Slight__c.field-meta.xml
<CustomField>
    <fullName>APTS_Liability_Type_Slight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liability Type Slight</label>
    <type>Checkbox</type>
</CustomField>