force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Liability_Type_Slight_Amount__c.field-meta.xml
<CustomField>
    <fullName>APTS_Liability_Type_Slight_Amount__c</fullName>
    <label>Liability Type Slight Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>