force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Limitation_of_Liability__c.field-meta.xml
<CustomField>
    <fullName>APTS_Limitation_of_Liability__c</fullName>
    <description>Direct liability categories</description>
    <inlineHelpText>Direct Liability</inlineHelpText>
    <label>Limitation of Liability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>