force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Limitation_of_Liability_Description__c.field-meta.xml
<CustomField>
    <fullName>APTS_Limitation_of_Liability_Description__c</fullName>
    <inlineHelpText>Please add Limitation of Liability Regulation details</inlineHelpText>
    <label>Limitation of Liability Description</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>