force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Managing_Party_BPA__c.field-meta.xml
<CustomField>
    <fullName>APTS_Managing_Party_BPA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Legal Entity</inlineHelpText>
    <label>Managing Party of BPA</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Managing Party of BPA)</relationshipLabel>
    <relationshipName>Agreements3</relationshipName>
    <type>Lookup</type>
</CustomField>