force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_My_Approvals__c.field-meta.xml
<CustomField>
    <fullName>APTS_My_Approvals__c</fullName>
    <formula>IF (AND (CONTAINS($CustomMetadata.Agreement_Action_Mapping__mdt.My_Approvals.Approval_Status__c, TEXT(Apttus_Approval__Approval_Status__c))
, CONTAINS($CustomMetadata.Agreement_Action_Mapping__mdt.My_Approvals.Agreement_Process_Flow_Short_Name__c, APTS_Process_Flow__c)), HYPERLINK(&quot;/apex/Apttus_Approval__MyApprovals?Id=&quot;&amp;Id, IMAGE(&quot;/resource/APTS_Button_MyApproval&quot;, &quot;My Approvals&quot;),&quot;_self&quot;),NULL)</formula>
    <label>My Approvals</label>
    <type>Text</type>
</CustomField>