force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Non_Standard_Data_security_Details__c.field-meta.xml
<CustomField>
    <fullName>APTS_Non_Standard_Data_security_Details__c</fullName>
    <inlineHelpText>Details of non-standard Data security.</inlineHelpText>
    <label>Non-Standard Data security Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>