force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Non_Standard_Export_Details__c.field-meta.xml
<CustomField>
    <fullName>APTS_Non_Standard_Export_Details__c</fullName>
    <inlineHelpText>What is being requested for changes to our standard export clause?</inlineHelpText>
    <label>Non-Standard Export Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>