force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Non_Standard_Tax_Details__c.field-meta.xml
<CustomField>
    <fullName>APTS_Non_Standard_Tax_Details__c</fullName>
    <inlineHelpText>Please provide the details of non-standard tax</inlineHelpText>
    <label>Non-Standard Tax Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>