force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Other_Governing_Law__c.field-meta.xml
<CustomField>
    <fullName>APTS_Other_Governing_Law__c</fullName>
    <inlineHelpText>Identify the other governing law if required</inlineHelpText>
    <label>Other Governing Law</label>
    <length>255</length>
    <type>Text</type>
</CustomField>