force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Other_Indemnification__c.field-meta.xml
<CustomField>
    <fullName>APTS_Other_Indemnification__c</fullName>
    <inlineHelpText>If you have chosen &quot;Non-Standard&quot; as &quot;Indemnification Category&quot;, please describe</inlineHelpText>
    <label>Non-Standard Indemnification Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>