force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Other_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>APTS_Other_Payment_Term__c</fullName>
    <description>If Payment Term is selected as &#39;Other&#39;, please specify here</description>
    <inlineHelpText>If Payment Term is selected as &#39;Other&#39;, please specify here</inlineHelpText>
    <label>Other Payment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>