force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Party_Details__c.field-meta.xml
<CustomField>
    <fullName>APTS_Party_Details__c</fullName>
    <description>Relevant only for DSO Agreements of type: BPA. When filling Controller, Joint Controller or Processor, details will be entered in this field.</description>
    <inlineHelpText>Role of the party details</inlineHelpText>
    <label>Party Details</label>
    <length>120</length>
    <type>Text</type>
</CustomField>