force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_PLAS_Nr__c.field-meta.xml
<CustomField>
    <fullName>APTS_PLAS_Nr__c</fullName>
    <description>PLAS-Number is provided of C/IPP for the purpose of ETAS CTG</description>
    <externalId>true</externalId>
    <inlineHelpText>PLAS-Number is provided of C/IPP</inlineHelpText>
    <label>PLAS-Nr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>