force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Preview_Submit_Approvals__c.field-meta.xml
<CustomField>
    <fullName>APTS_Preview_Submit_Approvals__c</fullName>
    <formula>IF(AND(NOT(ISPICKVAL( Apttus_Approval__Approval_Status__c ,&#39;Pending Approval&#39;)),
NOT(ISPICKVAL( Apttus_Approval__Approval_Status__c ,&#39;Approved&#39;))), HYPERLINK(&quot;/apex/Apttus_Approval__PreviewSubmitApprovals?Id=&quot;&amp;Id,IMAGE(&quot;/resource/Apttus__LightningResource/images/actions/preview.png&quot;,&quot;Preview &amp; Submit Approvals&quot;),&quot;_self&quot;),NULL)</formula>
    <label>Preview &amp; Submit Approvals</label>
    <type>Text</type>
</CustomField>