force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Processor__c.field-meta.xml
<CustomField>
    <fullName>APTS_Processor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Processor in a DSO Agreement</description>
    <inlineHelpText>The Processor in a DSO Agreement</inlineHelpText>
    <label>Processor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Processor)</relationshipLabel>
    <relationshipName>Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>