force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Processor_old__c.field-meta.xml
<CustomField>
    <fullName>APTS_Processor_old__c</fullName>
    <description>Used for agreements uploaded before Y2025</description>
    <externalId>true</externalId>
    <inlineHelpText>Used for agreements uploaded before Y2025</inlineHelpText>
    <label>Processor (old)</label>
    <length>230</length>
    <type>Text</type>
</CustomField>