force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>APTS_Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>