force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Related_Quote__c.field-meta.xml
<CustomField>
    <fullName>APTS_Related_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>