force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Risks__c.field-meta.xml
<CustomField>
    <fullName>APTS_Risks__c</fullName>
    <description>Risks</description>
    <label>Risks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>