force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_RODA_ID__c.field-meta.xml
<CustomField>
    <fullName>APTS_RODA_ID__c</fullName>
    <externalId>true</externalId>
    <label>ROPA ID</label>
    <length>230</length>
    <type>Text</type>
</CustomField>