force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Role_of_the_BPA_Party__c.field-meta.xml
<CustomField>
    <fullName>APTS_Role_of_the_BPA_Party__c</fullName>
    <label>Role of the BPA Party</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Joint controller</fullName>
            </value>
            <value>
                <fullName>Processor to:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>